Fix grid-gap (obsolete) to gap

--- a/css/style.css
+++ b/css/style.css
@@ -136,7 +136,7 @@ body {
   display: grid;
   grid-template-rows: 1fr min-content minmax(6rem, min-content) 1fr;
   grid-template-columns: minmax(min-content, max-content);
-  grid-row-gap: 1.5rem;
+  row-gap: 1.5rem;
   justify-content: center; }
   @media only screen and (max-width: 50em) {
     .header {
@@ -153,7 +153,7 @@ body {
   .header__seenon-text {
     display: grid;
     grid-template-columns: 1fr max-content 1fr;
-    grid-column-gap: 1.5rem;
+    column-gap: 1.5rem;
     align-items: center;
     font-size: 1.6rem;
     color: #aaa; }
@@ -165,7 +165,7 @@ body {
   .header__seenon-logos {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-column-gap: 3rem;
+    column-gap: 3rem;
     justify-items: center;
     align-items: center; }
     .header__seenon-logos img {
@@ -181,15 +181,15 @@ body {
   align-content: center;
   justify-content: center;
   justify-items: center;
-  grid-row-gap: 2rem; }
+  row-gap: 2rem; }
   @media only screen and (max-width: 50em) {
     .realtors {
       grid-column: 1 / -1; } }
   .realtors__list {
     display: grid;
     grid-template-columns: min-content max-content;
-    grid-column-gap: 2rem;
-    grid-row-gap: 5vh;
+    column-gap: 2rem;
+    row-gap: 5vh;
     align-items: center; }
     @media only screen and (max-width: 50em) {
       .realtors__list {
@@ -211,7 +211,7 @@ body {
   margin: 15rem 0;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
-  grid-gap: 6rem;
+  gap: 6rem;
   align-items: start; }
   @media only screen and (max-width: 37.5em) {
     .features {
@@ -220,8 +220,8 @@ body {
 .feature {
   display: grid;
   grid-template-columns: min-content 1fr;
-  grid-row-gap: 1.5rem;
-  grid-column-gap: 2.5rem; }
+  row-gap: 1.5rem;
+  column-gap: 2.5rem; }
   .feature__icon {
     fill: #c69963;
     width: 4.5rem;
@@ -289,7 +289,7 @@ body {
   margin: 15rem 0;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
-  grid-gap: 7rem; }
+  gap: 7rem; }
   @media only screen and (max-width: 37.5em) {
     .homes {
       margin: 8rem 0; } }
@@ -298,7 +298,7 @@ body {
   background-color: #f9f7f6;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-row-gap: 3.5rem; }
+  row-gap: 3.5rem; }
   .home__img {
     width: 100%;
     grid-row: 1 / 2;
@@ -349,7 +349,7 @@ body {
   display: grid;
   grid-template-columns: repeat(8, 1fr);
   grid-template-rows: repeat(7, 5vw);
-  grid-gap: 1.5rem;
+  gap: 1.5rem;
   padding: 1.5rem; }
   .gallery__item--1 {
     grid-row: 1 / span 2;
@@ -411,7 +411,7 @@ body {
   list-style: none;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
-  grid-gap: 2rem;
+  gap: 2rem;
   align-items: center; }
   .nav__link:link, .nav__link:visited {
     font-size: 1.4rem;
