--- a/sass/_features.scss
+++ b/sass/_features.scss
@@ -10,7 +10,7 @@
   // The column will be minimum 25rem to max 1fr
   // Base on this, the CSS will add as many trex as fit in the container(same as when the width gets to < 25rem, it will add a new row to maintain the minimum width)
   grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
-  grid-gap: 6rem;
+  gap: 6rem;
   // all of our grid will be in implicit grids
   align-items: start;
 
@@ -23,8 +23,8 @@
 
   display: grid;
   grid-template-columns: min-content 1fr;
-  grid-row-gap: 1.5rem;
-  grid-column-gap: 2.5rem;
+  row-gap: 1.5rem;
+  column-gap: 2.5rem;
   
   &__icon {
     fill: $color-primary;
