--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -10,7 +10,7 @@
   display: grid;
   grid-template-rows: 1fr min-content minmax(6rem, min-content) 1fr;
   grid-template-columns: minmax(min-content, max-content);
-  grid-row-gap: 1.5rem;
+  row-gap: 1.5rem;
   justify-content: center;
 
   @media only screen and (max-width: $bp-medium) {
@@ -34,7 +34,7 @@
   &__seenon-text {
     display: grid;
     grid-template-columns: 1fr max-content 1fr;
-    grid-column-gap: 1.5rem;
+    column-gap: 1.5rem;
     align-items: center;
 
     font-size: 1.6rem;
@@ -52,7 +52,7 @@
   &__seenon-logos {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-column-gap: 3rem;
+    column-gap: 3rem;
     justify-items: center;
     align-items: center;
 
